# HelpLA.ai

./: README.md
api/: pyproject.toml
api/src/api/: main.py
database/: .env  langchain.py  pyproject.toml
database/src/database/: Load_DB.py  __init__.py  data.json  main.ipynb  main.py
la-wildfire-relief-chatbot/: package-lock.json  package.json
la-wildfire-relief-chatbot/src/: App.js  Chatbot.js  MerlinTextInput.js  chatbotConfig.js
