[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Olivier D'Ancona", email = "olivier.dancona@master.hes-so.ch" }
]
dependencies = [
    "langchain>=0.3.20",
    "langchain-openai>=0.3.7",
    "weaviate-client>=4.11.1",
    "fastapi>=0.115.11",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
